# zsh-llm-cli-autocomplete-tool

./: .gitignore  =0.43.1  ENHANCED_FEATURES.md  FIXES.md  INSTALL.md  LICENSE  Modelfile  PLUGIN_HANG_FIX.md  PLUGIN_LOAD_GUIDE.md  PLUGIN_MODEL_LOADING.md  README.md  SMART_COMMIT.md  TROUBLESHOOTING.md  fix_command.sh  install.sh  pyproject.toml  requirements-training.txt  requirements.txt  setup.py  setup_path.sh  test_completion.zsh  test_completion_fix.py  test_enhanced_features.py  test_init.sh  test_lora_loading_steps.sh  test_lora_model.py  test_model_loading.sh  test_plugin_blocking.sh  test_plugin_complete.sh  test_precmd_hook.sh  test_real_lora.py  test_smart_commit.py  testcommit.txt
config/: default.yaml
docs/: architectire.md  architecture.md  improvements.md
src/model_cli_autocomplete.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model_completer/: __init__.py  cache.py  cli.py  client.py  completer.py  enhanced_completer.py  hf_uploader.py  lora_inference.py  ollama_lora_import.py  ollama_manager.py  real_lora_trainer.py  simple_training.py  training.py  ui.py  utils.py
src/scripts/: model_completion.zsh  preload_lora.py  zsh_autocomplete.plugin.zsh
src/training/: axolotl_trainer.py  convert_to_axolotl_format.py  test_adapter.py  train.sh  training_data.txt  zsh_training_data.jsonl
tests/: test_client.py
